# math-tool

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: trunk.yml
ci/: clean.sh
ci/project/: build.sh  clean.sh  docgen.sh  lint.sh  test.sh
ci/release/: message.txt  pipeline.sh  push.sh
doc/itmo/1/: report-1.tex
doc/itmo/2/: report.md
doc/itmo/3/: report.md  report.tex
doc/itmo/4/: report.tex
doc/itmo/5/: report.tex
res/: a.txt  bnum.txt  cannot.txt  null.txt  p.txt  test.txt
res/point/10/: anna.txt  death.txt  horizontal.txt  pam.txt  parabola.txt  t.txt
src/: Main.cpp  main.cpp
src/App/: Canvas.hpp  Core.hpp  Error.hpp
src/App/Misc/: Point.hpp
src/App/Tool/: Approx.cpp  Approx.hpp  EquationSolver.cpp  EquationSolver.hpp  EquationSystemSolver.cpp  EquationSystemSolver.hpp  Integrator.cpp  Integrator.hpp  Interpolator.cpp  Interpolator.hpp  LinEqSys.cpp  LinEqSys.hpp  lineqsys.cpp  lineqsys.hpp
src/Mathematica/: Core.hpp  Error.hpp
src/Mathematica/Abstract/: Basic.hpp  Field.hpp  Float.hpp  Real.hpp
src/Mathematica/Algebra/: Field.hpp  FieldTrait.hpp
src/Symatica/: Core.hpp  Error.hpp
src/tool/: lineqsys.cpp  lineqsys.hpp
test/: HelloTest.cpp  generator.cpp  generator.hpp  main.cpp  test_basic_op.cpp  test_eq_solve.cpp  test_linal_op.cpp  test_lineqsys_iter.cpp  test_lineqsys_solve.cpp  test_matrix.cpp  test_vector.cpp  vector.cpp
test/legacy/: generator.cpp  generator.hpp  test_basic_op.cpp  test_eq_solve.cpp  test_lineqsys_solve.cpp  test_matrix.cpp  test_vector.cpp
(+116 files in other folders)
